; ModuleID = '/home/carl/AnghaBench/nanomsg/src/core/extr_ep.c_nn_ep_stopped.c'
source_filename = "/home/carl/AnghaBench/nanomsg/src/core/extr_ep.c_nn_ep_stopped.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nn_ep = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { %struct.TYPE_4__, i32 }
%struct.TYPE_4__ = type { i32, i32*, i32, %struct.TYPE_3__* }

@NN_FSM_ACTION = common dso_local global i32 0, align 4
@NN_EP_ACTION_STOPPED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nn_ep_stopped(%struct.nn_ep* %0) #0 {
  %2 = alloca %struct.nn_ep*, align 8
  store %struct.nn_ep* %0, %struct.nn_ep** %2, align 8
  %3 = load %struct.nn_ep*, %struct.nn_ep** %2, align 8
  %4 = getelementptr inbounds %struct.nn_ep, %struct.nn_ep* %3, i32 0, i32 0
  %5 = load %struct.nn_ep*, %struct.nn_ep** %2, align 8
  %6 = getelementptr inbounds %struct.nn_ep, %struct.nn_ep* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 3
  store %struct.TYPE_3__* %4, %struct.TYPE_3__** %8, align 8
  %9 = load i32, i32* @NN_FSM_ACTION, align 4
  %10 = load %struct.nn_ep*, %struct.nn_ep** %2, align 8
  %11 = getelementptr inbounds %struct.nn_ep, %struct.nn_ep* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 2
  store i32 %9, i32* %13, align 8
  %14 = load %struct.nn_ep*, %struct.nn_ep** %2, align 8
  %15 = getelementptr inbounds %struct.nn_ep, %struct.nn_ep* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 1
  store i32* null, i32** %17, align 8
  %18 = load i32, i32* @NN_EP_ACTION_STOPPED, align 4
  %19 = load %struct.nn_ep*, %struct.nn_ep** %2, align 8
  %20 = getelementptr inbounds %struct.nn_ep, %struct.nn_ep* %19, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 0
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %21, i32 0, i32 0
  store i32 %18, i32* %22, align 8
  %23 = load %struct.nn_ep*, %struct.nn_ep** %2, align 8
  %24 = getelementptr inbounds %struct.nn_ep, %struct.nn_ep* %23, i32 0, i32 0
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 1
  %26 = load i32, i32* %25, align 8
  %27 = load %struct.nn_ep*, %struct.nn_ep** %2, align 8
  %28 = getelementptr inbounds %struct.nn_ep, %struct.nn_ep* %27, i32 0, i32 0
  %29 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %28, i32 0, i32 0
  %30 = call i32 @nn_ctx_raise(i32 %26, %struct.TYPE_4__* %29)
  ret void
}

declare dso_local i32 @nn_ctx_raise(i32, %struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
